fix line height gap bug

--- a/src/sass/partials/_mixins.scss
+++ b/src/sass/partials/_mixins.scss
@@ -21,7 +21,7 @@
 
 @mixin banding($background-color) {
     font-family: 'Guardian Egyptian Web';
-    line-height: 1.4;
+    line-height: 1.35;
 
     &__inner {
         display: inline;
